unpackaged/main/default/objects/Supplier__c/fields/TotalNumberOfVWCStrikers__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberOfVWCStrikers__c</fullName>
    <label>Total Number of VQC Strikes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>