unpackaged/main/default/objects/Supplier__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Tracking number of test kit sent to supplier</description>
    <label>Tracking Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>