unpackaged/main/default/objects/Supplier__c/fields/UltraPremiumGroup__c.field-meta.xml
<CustomField>
    <fullName>UltraPremiumGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ultra Premium Group?</label>
    <type>Checkbox</type>
</CustomField>