unpackaged/main/default/objects/Supplier__c/fields/Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribe</label>
    <type>Checkbox</type>
</CustomField>