unpackaged/main/default/objects/Supplier__c/fields/UpdatedToNewDataPushTime__c.field-meta.xml
<CustomField>
    <fullName>UpdatedToNewDataPushTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will go away</description>
    <label>Updated To New Data Push Time?</label>
    <type>Checkbox</type>
</CustomField>