unpackaged/main/default/objects/Supplier__c/fields/UrethaneCastingApproved__c.field-meta.xml
<CustomField>
    <fullName>UrethaneCastingApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urethane Casting Approved?</label>
    <type>Checkbox</type>
</CustomField>