unpackaged/main/default/objects/Supplier__c/fields/VerifiedCountry__c.field-meta.xml
<CustomField>
    <fullName>VerifiedCountry__c</fullName>
    <label>Verified Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>