unpackaged/main/default/objects/Supplier__c/fields/VQC__c.field-meta.xml
<CustomField>
    <fullName>VQC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VQC?</label>
    <type>Checkbox</type>
</CustomField>