unpackaged/main/default/objects/Supplier__c/fields/W9__c.field-meta.xml
<CustomField>
    <fullName>W9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W-9 Uploaded?</label>
    <type>Checkbox</type>
</CustomField>