unpackaged/main/default/objects/Supplier__c/fields/WantToSend__c.field-meta.xml
<CustomField>
    <fullName>WantToSend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field needs updating, as it is unclear</description>
    <label>Want to Send?</label>
    <type>Checkbox</type>
</CustomField>