unpackaged/main/default/objects/Supplier__c/fields/WaterJetCutterCount__c.field-meta.xml
<CustomField>
    <fullName>WaterJetCutterCount__c</fullName>
    <label>Water Jet Cutter Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>