unpackaged/main/default/objects/Supplier__c/fields/Welding_CNC_Parts__c.field-meta.xml
<CustomField>
    <fullName>Welding_CNC_Parts__c</fullName>
    <label>Welding - CNC Parts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>