unpackaged/main/default/objects/Supplier__c/fields/Welding_Stainless_Steel__c.field-meta.xml
<CustomField>
    <fullName>Welding_Stainless_Steel__c</fullName>
    <label>Welding - Stainless Steel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>