unpackaged/main/default/objects/Supplier__c/fields/WeldingAluminum__c.field-meta.xml
<CustomField>
    <fullName>WeldingAluminum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welding Aluminum?</label>
    <type>Checkbox</type>
</CustomField>