unpackaged/main/default/objects/Supplier__c/fields/WeldingAWSCertified__c.field-meta.xml
<CustomField>
    <fullName>WeldingAWSCertified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welding AWS Certified?</label>
    <type>Checkbox</type>
</CustomField>