unpackaged/main/default/objects/Supplier__c/fields/WireEDMCount__c.field-meta.xml
<CustomField>
    <fullName>WireEDMCount__c</fullName>
    <label>Wire EDM Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>