unpackaged/main/default/objects/Supplier__c/fields/WorkStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkStatus__c</fullName>
    <label>Work Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Capacity</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>Looking for Work</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>