unpackaged/main/default/objects/Supplier__c/fields/YearEstablished__c.field-meta.xml
<CustomField>
    <fullName>YearEstablished__c</fullName>
    <label>Year Established</label>
    <length>5</length>
    <type>Text</type>
</CustomField>