unpackaged/main/default/objects/Supplier__c/fields/YearsOfExperience__c.field-meta.xml
<CustomField>
    <fullName>YearsOfExperience__c</fullName>
    <label>Years of Experience</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>