unpackaged/main/default/objects/Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SupplierCompanyName__c</columns>
    <columns>SupplierStatus__c</columns>
    <columns>LastJobAcceptedDate__c</columns>
    <columns>DateApproved__c</columns>
    <columns>NDASigned__c</columns>
    <columns>ITARCertified__c</columns>
    <columns>ChinaGroup__c</columns>
    <columns>DirectShip__c</columns>
    <columns>PremiumGroup__c</columns>
    <columns>UltraPremiumGroup__c</columns>
    <columns>TermsAndConditionsAcceptedDatetime__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>EmailAddress__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>