unpackaged/main/default/objects/Supplier__c/listViews/California_Partner_Leads.listView-meta.xml
<ListView>
    <fullName>California_Partner_Leads</fullName>
    <columns>SupplierCompanyName__c</columns>
    <columns>Name__c</columns>
    <columns>NAME</columns>
    <columns>P21_Account_Details__c</columns>
    <columns>JobRevenueLY__c</columns>
    <columns>JobRevenueTY__c</columns>
    <columns>AccountDomain__c</columns>
    <columns>AccountID__c</columns>
    <columns>ActivityStatus__c</columns>
    <columns>EmailAddress__c</columns>
    <columns>LastJobAcceptedDate__c</columns>
    <columns>State__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FacilityInUS__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>California</value>
    </filters>
    <label>California Partner Leads</label>
</ListView>