unpackaged/main/default/objects/Supplier__c/listViews/Failed_Suppliers.listView-meta.xml
<ListView>
    <fullName>Failed_Suppliers</fullName>
    <columns>NAME</columns>
    <columns>SupplierCompanyName__c</columns>
    <columns>Name__c</columns>
    <columns>OnboardingAttempts__c</columns>
    <columns>OnboardingParentCase__c</columns>
    <columns>SupplierStatus__c</columns>
    <columns>TestPartStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OnboardingAttempts__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>SupplierStatus__c</field>
        <operation>equals</operation>
        <value>registered</value>
    </filters>
    <label>[GNO]Failed Suppliers</label>
    <sharedTo>
        <role>GNO</role>
    </sharedTo>
</ListView>