unpackaged/main/default/objects/Supplier__c/listViews/Marketplace.listView-meta.xml
<ListView>
    <fullName>Marketplace</fullName>
    <columns>SupplierCompanyName__c</columns>
    <columns>SupplierStatus__c</columns>
    <columns>NAME</columns>
    <columns>AccountID__c</columns>
    <columns>Address__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>ZipCode__c</columns>
    <columns>AccountDomain__c</columns>
    <columns>ERPLink__c</columns>
    <columns>Name__c</columns>
    <columns>TimelinessRating__c</columns>
    <columns>QualityRating__c</columns>
    <columns>PartnerID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SupplierStatus__c</field>
        <operation>equals</operation>
        <value>approved,registered,supplier_only</value>
    </filters>
    <label>[Market]All Active Suppliers</label>
    <sharedTo>
        <roleAndSubordinatesInternal>SellerMarketplace</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>