unpackaged/main/default/objects/Supplier__c/listViews/Partner_Promotions.listView-meta.xml
<ListView>
    <fullName>Partner_Promotions</fullName>
    <columns>NAME</columns>
    <columns>SupplierCompanyName__c</columns>
    <columns>SupplierStatus__c</columns>
    <columns>LastJobAcceptedDate__c</columns>
    <columns>DateApproved__c</columns>
    <columns>NDASigned__c</columns>
    <columns>ITARCertified__c</columns>
    <columns>ChinaGroup__c</columns>
    <columns>DirectShip__c</columns>
    <columns>PremiumGroup__c</columns>
    <columns>UltraPremiumGroup__c</columns>
    <columns>TermsAndConditionsAcceptedDatetime__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>EmailAddress__c</columns>
    <columns>AccountID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Partner Promotions</label>
    <sharedTo>
        <group>XOMGNOGroup</group>
    </sharedTo>
</ListView>