unpackaged/main/default/objects/Supplier__c/listViews/PUP_Testing.listView-meta.xml
<ListView>
    <fullName>PUP_Testing</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>PUP Testing</label>
    <sharedTo>
        <role>GNO</role>
    </sharedTo>
</ListView>