unpackaged/main/default/objects/Supplier__c/listViews/SAus_Coaching_Queue.listView-meta.xml
<ListView>
    <fullName>SAus_Coaching_Queue</fullName>
    <columns>NAME</columns>
    <columns>SupplierCompanyName__c</columns>
    <columns>SPOC_Owner__c</columns>
    <columns>LastJobAcceptedDate__c</columns>
    <columns>QualityRating__c</columns>
    <columns>TimelinessRating__c</columns>
    <columns>State__c</columns>
    <columns>EmailAddress__c</columns>
    <columns>SupplierStatus__c</columns>
    <columns>ERPLink__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPOC_Supplier__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SPOC_Owner__c</field>
        <operation>equals</operation>
        <value>Samantha Aus</value>
    </filters>
    <label>SAus Coaching Queue</label>
    <sharedTo>
        <group>XOMGNOGroup</group>
    </sharedTo>
</ListView>