unpackaged/main/default/objects/Supplier__c/listViews/SPOC_Suppliers.listView-meta.xml
<ListView>
    <fullName>SPOC_Suppliers</fullName>
    <columns>NAME</columns>
    <columns>SupplierCompanyName__c</columns>
    <columns>SPOC_Owner__c</columns>
    <columns>LastJobAcceptedDate__c</columns>
    <columns>QualityRating__c</columns>
    <columns>TimelinessRating__c</columns>
    <columns>State__c</columns>
    <columns>EmailAddress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPOC_Supplier__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SPOC Suppliers</label>
</ListView>