unpackaged/main/default/objects/Supplier__c/listViews/Struggling_Quality_Partners.listView-meta.xml
<ListView>
    <fullName>Struggling_Quality_Partners</fullName>
    <columns>NAME</columns>
    <columns>SupplierCompanyName__c</columns>
    <columns>LastJobAcceptedDate__c</columns>
    <columns>QualityRating__c</columns>
    <columns>TimelinessRating__c</columns>
    <columns>CompletedJobs__c</columns>
    <columns>PremiumGroup__c</columns>
    <columns>UltraPremiumGroup__c</columns>
    <columns>SupplierStatus__c</columns>
    <columns>CoachingLog__c</columns>
    <columns>ERPLink__c</columns>
    <columns>State__c</columns>
    <columns>EmailAddress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QualityRating__c</field>
        <operation>lessOrEqual</operation>
        <value>69</value>
    </filters>
    <filters>
        <field>AddToCoachingList__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>SupplierStatus__c</field>
        <operation>notEqual</operation>
        <value>expelled,opted_out,registered,supplier_only</value>
    </filters>
    <filters>
        <field>InjectionMoldingApproved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>UrethaneCastingApproved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>SLSApproved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>SLAApproved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>FDMApproved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>HPMultiJetApproved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>contains</operation>
        <value>U</value>
    </filters>
    <label>Struggling Quality Partners</label>
</ListView>