unpackaged/main/default/objects/Supplier__c/listViews/Supplier_Approval.listView-meta.xml
<ListView>
    <fullName>Supplier_Approval</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>SupplierCompanyName__c</columns>
    <columns>SupplierStatus__c</columns>
    <columns>OnboardingCallCompleted__c</columns>
    <columns>NDASigned__c</columns>
    <columns>W9__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OnboardingCallCompleted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NDASigned__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>W9__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>[GNO]Supplier Approval</label>
    <sharedTo>
        <group>XOMGNOGroup</group>
    </sharedTo>
</ListView>